<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.silview.androidlearning.MainActivity">

    <Button
        android:id="@+id/buttontextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textviewactivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonListener"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/listeneractivity"
        app:layout_constraintEnd_toEndOf="@+id/buttontextview"
        app:layout_constraintStart_toStartOf="@+id/buttontextview"
        app:layout_constraintTop_toBottomOf="@+id/buttontextview" />

    <Button
        android:id="@+id/buttonEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/edittextactivity"
        app:layout_constraintEnd_toEndOf="@+id/buttontextview"
        app:layout_constraintStart_toStartOf="@+id/buttontextview"
        app:layout_constraintTop_toBottomOf="@+id/buttonListener" />

    <Button
        android:id="@+id/buttonRadioButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/radiobutton"
        app:layout_constraintEnd_toEndOf="@+id/buttontextview"
        app:layout_constraintStart_toStartOf="@+id/buttontextview"
        app:layout_constraintTop_toBottomOf="@+id/buttonEditText" />

    <Button
        android:id="@+id/buttonCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/checkbox"
        app:layout_constraintEnd_toEndOf="@+id/buttontextview"
        app:layout_constraintStart_toStartOf="@+id/buttontextview"
        app:layout_constraintTop_toBottomOf="@+id/buttonRadioButton" />

</android.support.constraint.ConstraintLayout>
